<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="15dp"
        android:text="@string/main"
        android:textSize="19dp"
        />

    <Button
        android:id="@+id/button"
        android:onClick="onClick"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="274dp"
        android:textColor="@color/white"
        android:background="@drawable/bbkg"
        android:text="@string/equip"
        tools:ignore="UsingOnClickInXml"
        />

    <Button
        android:id="@+id/button2"
        android:onClick="onClick"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="337dp"
        android:textColor="@color/white"
        android:background="@drawable/bbkg"
        android:text="@string/info"
        tools:ignore="UsingOnClickInXml"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="402dp"
        android:onClick="onClick"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:background="@drawable/bbkg"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>