<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertEquipment"
    >

    <Button
        android:id="@+id/search_but"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="129dp"
        android:onClick="onClick"
        android:text="@string/insert_into"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/new_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/equip"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/insert_equip_tup"
        android:textSize="19dp" />

</RelativeLayout>